k8s/02-traefik.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ms
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.11
          args:
            - "--api.insecure=true"
            - "--providers.kubernetescrd"
            - "--entrypoints.web.address=:80"
          ports:
            - containerPort: 80
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: ms
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: web
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: dashboard
