k8s/eureka-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
      - name: eureka-server
        image: ghcr.io/bikram054/ms/eureka-server:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8761
        livenessProbe:
          httpGet:
            path: /
            port: 8761
          initialDelaySeconds: 40
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8761
          initialDelaySeconds: 5
          periodSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: ms
spec:
  selector:
    app: eureka-server
  ports:
  - port: 8761
    targetPort: 8761
  type: NodePort
