k8s/gateway-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-server
  namespace: ms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-server
  template:
    metadata:
      labels:
        app: gateway-server
    spec:
      containers:
      - name: gateway-server
        image: ghcr.io/bikram054/ms/gateway-server:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-server
  namespace: ms
spec:
  selector:
    app: gateway-server
  ports:
  - port: 8080
    targetPort: 8080
  type: NodePort
